--- a/package.json
+++ b/package.json
@@ -37,5 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/minus0805/movie-app/"
+  "homepage": "https://minus0805.github.io/movie-app/"
 }
